# Checkers-Samuel

./: .gitignore  CMakeLists.txt  Makefile  README.md  board.h  evaluator.cpp  game.cpp  learner.cpp  learner.h  main.cpp  movegen.cpp  movegen.h  search.cpp  search.h
.github/workflows/: build.yml
src/: board.cpp  evaluator.h  game.cpp  game.h  learner.cpp  rote_table.cpp  rote_table.h  search.cpp
